tests/ecc-aws-027-prevent_0-65535_ingress_and_all/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-01f3784d76b62c9e4",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-027-prevent_0-65535_ingress_and_all"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    }
                ],
                "VpcId": "vpc-000000000",
                "OwnerId": "644160558196",
                "GroupName": "027_security_group_green",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "udp",
                        "FromPort": 10,
                        "ToPort": 200,
                        "UserIdGroupPairs": [],
                        "IpRanges": [],
                        "Ipv6Ranges": [
                            {
                                "CidrIpv6": "fe80::/10"
                            }
                        ],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 1,
                        "ToPort": 65535,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "10.10.10.0/32"
                            },
                            {
                                "CidrIp": "10.0.0.0/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
